Fix layout on iPhone 6

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1079,7 +1079,7 @@ form .form-control:focus {
   }
   header .navbar-default ul.navbar-nav li a {
     color: #ffffff;
-    border-bottom: 1px solid #376fa4;
+    border-bottom: 1px solid #e16276;
   }
   header .navbar-default ul.navbar-nav li a.getApp {
     color: #ffffff;
